
Version 1.3.2

    - Fixed bug where stats file was not up to date (issue #26).
    - Fixed bug with `--blockCacheMaxDirty' not working (issue #25).
    - Added automatic block cache disk file resizing (issue #23).
    - Added `--maxUploadSpeed' and `--maxDownloadSpeed' flags.
    - Added `-rrs' flag to support Reduced Redundancy Storage.
    - Fixed missing warning for --baseURL when missing trailing slash.

Version 1.3.1 (r413) released 19 Oct 2009

    - Added `--blockCacheMaxDirty' flag.
    - Fixed cURL handle leak when cancelling in-progress writes.
    - Updated Mac OS X build instructions and added Snow Leopard support.

Version 1.3.0 (r392) released 27 Sep 2009

    - Added support for local cache files that can persist across restarts.
    - Added built-in support for encryption and authentication.
    - In-progress writes are now cancelled when a duplicate write occurs.
    - Changed default for `--blockCacheWriteDelay' from zero to 250ms.
    - Fix obscure and unlikely deadlock bug in ec_protect.c.
    - Allow configurable compression level via --compress=LEVEL.
    - Fix bug that caused spurious "impossible expected MD5" log messages.

Version 1.2.3 (r333) released 15 May 2009

    - Added `--vhost' flag for virtual hosted style URLs in all requests.
    - Don't send LOG_DEBUG messages to syslog unless --debug flag given.
    - Fix race condition when generating HTTP Date: headers.
    - Allow command line flags to be specified in /etc/fstab.

Version 1.2.2 (r316) released 20 Dec 2008

    - Added `--compress' flag enabling compression of file blocks.
      Note: compressed blocks are not compatible with versions < 1.2.2.
    - Disable the MD5 cache when the `--readOnly' flag is given.
    - Make `--md5CacheTime=0' really mean `infinite' as promised in man page.
    - Added `--debug-http' flag for debugging HTTP headers.
    - Don't let block and MD5 caches be configured larger than necessary.
    - Fixed a few minor issues with statistics reporting.
